k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: fibos-node-1-service
  labels:
    app: fibos-node-1
spec:
  type: NodePort
  ports:
    - name: '8080'
      port: 8080
      targetPort: 8080
    - name: '30977'
      port: 30977
      targetPort: 9977
      nodePort: 30977
  selector:
    app: fibos-node-1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fibos-node-1-ingress
spec:
  rules:
    - host:
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: fibos-node-1-service
                port:
                  number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: fibos-node-1
  labels:
    app: fibos-node-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fibos-node-1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fibos-node-1
    spec:
      containers:
        - image: mingfunwong/fibos:v1.7.1.12
          name: fibos
          resources: {}
